vibe APIs
